compiler/testData/diagnostics/tests/enum/AbstractEnum.kt
package abstract

<!ABSTRACT_MODIFIER_IN_ENUM!>abstract<!> enum class MyAbstractEnum() {}